0.13 - ...
- CMake prevents building on OpenSSL 1.x.x
- Separated frontends from libneosurf source tree
- Renamed "netsurf-gtk3" to "netsurf-gtk"
- Headers are now installed for libcss, libdom, etc
- Entering an address into the bar uses the current tab instead of opening a
new one (TODO)
- Merged libdom-hubbub-bindings with libdom (TODO)
- Various small code improvements

0.12 - Jun 5 2023
- Minor compatibility improvements
- Added proper check for pkg-config or pkgconf
- Consolidated the search and URL bars on GTK frontend
- Temporarily removed Gtk3 preferences menu; it was broken in upstream
NetSurf and should be rewritten

0.11 - May 26 2023
- Added byacc support
- Removed some previous bison artifacts
- Fixed building with clang/lld
- Removed excess warnings
- Added pkg_config checks for m4, zlib and libssl
- Various build system improvements
- Fixed hard-coded pathnames in libneosurf, neosurf-gtk3 and neosurf-vi

0.10 - May 14 2023
- Disabled urlfilter in Visurf
- Visurf now better handles local file paths
- Fixed parser_wrapper.sh failing on some systems
- Added all commands and bindings to README.md
- Added flex and bison as requirements to README.md

0.9 - May 11 2023
- Reworked README.md
- Adding some styling guidelines to CONTRIBUTING.md
- Added new pictures of NeoSurf
- Improved how cmake handles CFLAGS
- Fixed dependency searching
- Visurf now defaults to about:welcome
- Various minor changes
- Removed about:bindings and about:Choices (in favor of about:config)

0.8 - May 10 2023
- Improved clarity of build instructions in README
- Visurf and Gtk3 frontends now optional
- Resources required for the frontends are now installed properly in
${CMAKE_INSTALL_PREFIX}/share
- libneosurf headers are now installed
- CMAKE_INSTALL_LIBDIR variable is now supported

0.7 - May 9 2023
- Added screen of NeoSurf to README.md
- Added LICENSE file
- Prevent building if source or build dirs have whitespace