@@ -2021,12 +2021,13 @@ static gboolean websearch_entry_activate_cb(GtkWidget *widget, gpointer data)
 	if (res == NSERROR_OK) {
 		bw = tb->get_bw(tb->get_ctx);
 
-		res = browser_window_create(
-			BW_CREATE_HISTORY | BW_CREATE_TAB | BW_CREATE_FOREGROUND,
-			url,
-			NULL,
-			bw,
-			NULL);
+		res = browser_window_navigate(bw,
+			     url,
+			     NULL,
+			     BW_NAVIGATE_NONE | BW_NAVIGATE_HISTORY,
+			     NULL,
+			     NULL,
+			     NULL);
 		nsurl_unref(url);
 	}
 	if (res != NSERROR_OK) {
