@@ -32,7 +32,7 @@
 #include <string.h>
 #include <strings.h>
 
-#include "neosurf/plot_style.h"
+#include <neosurf/plot_style.h>
 #include <neosurf/utils/errors.h>
 #include <neosurf/utils/log.h>
 #include <neosurf/utils/utils.h>
@@ -63,6 +63,15 @@ struct nsoption_s *nsoptions_default = NULL;
 static struct nsoption_s defaults[] = {
 #include <neosurf/desktop/options.h>
 
+#if defined(riscos)
+#include "riscos/options.h"
+#elif defined(nsgtk)
+#include "gtk/options.h"
+#elif defined(nswin32)
+#include "windows/options.h"
+#elif defined(nsvi)
+#include "visurf/options.h"
+#endif
 	{ NULL, 0, OPTION_INTEGER, { 0 } }
 };
 
